@@ -17,6 +17,10 @@ as well as EDB-SPL functions, stored procedures and packages in
 EnterpriseDB.
 </p>
 
+<P><b>Note: </b>The debugger may only be used by roles with 'superuser' 
+privileges.
+</p> 
+
 <p>In order to use the debugger, a plugin is required on your server. This
 is included by default with EnterpriseDB, and is available for download on
 <a href="http://pgfoundry.org/projects/edb-debugger/">pgFoundry</a>. It is
