@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-12 DP  1.8.1  Prevent non-superusers from attempting to use the
+                      debugger because the plugin API won't let them anyway.
 2007-12-11 DP  1.8.1  Check that functions exist before debugging or setting
                       global breakpoints on them. Remove them from the treeview
                       if not.
@@ -1030,6 +1032,7 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
 
 
